k8s/order/order-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  labels:
    app: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      name: order-db
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: order-db
  labels:
    app: order-db
spec:
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
