k8s/order/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      name: order
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: hugobrilhante/saga-pattern:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "2"
              memory: "1024Mi"
            requests:
              cpu: "1"
              memory: "512Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
