k8s/order/order-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: order
 annotations:
   konghq.com/strip-path: 'true'
spec:
 parentRefs:
 - name: kong
 rules:
 - matches:
     - path:
         type: PathPrefix
         value: /
   backendRefs:
   - name: order
     kind: Service
     port: 8000
